--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "vasp-vibration-analyzer"
+name = "VisualizePhonon"
 version = "0.1.0"
 description = "A tool for analyzing vibrational modes from VASP OUTCAR files"
 readme = "README.md"
@@ -39,9 +39,6 @@ vesta = [
     "pymatgen>=2022.0.0",
 ]
 
-
-# 注意: 以下のsetuptools部分は最新のpyproject.tomlのみでの設定では
-# 標準化されていませんが、setuptools 61.0.0以降では動作します
 [tool.setuptools]
 package-dir = {"" = "src"}
 # packages = [""]
@@ -62,4 +59,4 @@ profile = "black"
 line_length = 88
 
 [project.scripts]
-command-cli = "vasp_vibration_analyzer:cmdline.main"
+command-cli = "VisualizePhonon:cmdline.main"
