--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "VisualizePhonon"
-version = "0.0.1"
+version = "0.0.2"
 description = "A tool for analyzing vibrational modes from VASP OUTCAR files"
 readme = "README.md"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Tomohito Amano", email = "amanotomohito040@gmail.com"}
 ]
 license = {text = "MIT"}
 requires-python = ">=3.7"
@@ -42,6 +42,7 @@ vesta = [
 [tool.setuptools]
 package-dir = {"" = "src"}
 # packages = [""]
+license-files = []
 
 # [tool.setuptools.packages.find]
 # where = ["src"]
